# image_processor

./: .gitignore  CMakeLists.txt  README.md  _alpha_beta_processing_8cpp.html  _alpha_beta_processing_8h.html  _alpha_beta_processing_8h_source.html  _convolution_processing_8cpp.html  _convolution_processing_8h.html  _convolution_processing_8h_source.html  _gamma_processing_8cpp.html  _gamma_processing_8h.html  _gamma_processing_8h_source.html  _gaussian_blur_kernel_8cpp.html  _gaussian_blur_kernel_8h.html  _gaussian_blur_kernel_8h_source.html  _horizontal_sobel_kernel_8cpp.html  _horizontal_sobel_kernel_8h.html  _horizontal_sobel_kernel_8h_source.html  _identity_kernel_8cpp.html  _identity_kernel_8h.html  _identity_kernel_8h_source.html  _image_8h.html  _image_8h_source.html  _image_processing_8h.html  _image_processing_8h_source.html  _kernel_8cpp.html  _kernel_8h.html  _kernel_8h_source.html  _mean_blur_kernel_8cpp.html  _mean_blur_kernel_8h.html  _mean_blur_kernel_8h_source.html  _p_g_m_image_8cpp.html  _p_g_m_image_8h.html  _p_g_m_image_8h_source.html  _p_p_m_image_8cpp.html  _p_p_m_image_8h.html  _p_p_m_image_8h_source.html  _point_8cpp.html  _point_8h.html  _point_8h_source.html  (+80 more)
geometry/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h
image/: Image.h  PGMImage.cpp  PGMImage.h  PPMImage.cpp  PPMImage.h
image/pixel/: pixel.cpp  pixel.h
image/processors/: AlphaBetaProcessing.cpp  AlphaBetaProcessing.h  ConvolutionProcessing.cpp  ConvolutionProcessing.h  GammaProcessing.cpp  GammaProcessing.h  ImageProcessing.h  Kernel.cpp  Kernel.h
image/processors/kernels/: GaussianBlurKernel.h  HorizontalSobelKernel.h  IdentityKernel.cpp  IdentityKernel.h  Kernel.cpp  Kernel.h  MeanBlurKernel.cpp  MeanBlurKernel.h  SobelKernel.cpp  SobelKernel.h  VerticalSobelKernel.h
lib/: CMakeLists.txt  Doxyfile  mainpage.dox
lib/geometry/: Rectangle.h  drawing.h
lib/image/: Image.h  PPMImage.h
lib/image/processors/: AlphaBetaProcessing.cpp  ConvolutionProcessing.h
lib/image/processors/kernels/: GaussianBlurKernel.cpp  HorizontalSobelKernel.cpp  IdentityKernel.h  MeanBlurKernel.h  SobelKernel.h  VerticalSobelKernel.cpp
pgm sample images/: gauss-1-brain_398.ascii.pgm  gauss-2-brain_398.ascii.pgm  gauss3-brain_398.ascii.pgm  higher_contrast-apollonian_gasket.ascii.pgm  higher_contrast-glassware_noisy.ascii.pgm  higher_gamma-barbara.ascii.pgm  hsobel-brain_398.ascii.pgm  hsobel-brain_492.ascii.pgm  hsobel-glassware_noisy.ascii.pgm  lower_brightness-balloons_noisy.ascii.pgm  vsobel-brain_398.ascii.pgm  vsobel-brain_492.ascii.pgm  vsobel-columns.ascii.pgm
point/: Point.cpp  Point.h
ppm sample images/: high_contrast_low_brightness-blackbuck.ascii.ppm  high_gamma-blackbuck.ascii.ppm  hsobel-pbmlib.ascii.ppm  hsobel-sines.ascii.ppm  hsobel-snail.ascii.ppm  low_gamma-blackbuck.ascii.ppm  lower_brightness-blackbuck.ascii.ppm  vsobel-pbmlib.ascii.ppm  vsobel-sines.ascii.ppm  vsobel-snail.ascii.ppm
sample drawings/: sines.ascii.ppm
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  files_a.js  files_b.js  (+24 more)
tests/: AlphaBetaProcessorTest.cpp  CMakeLists.txt  ConvolutionProcessorTest.cpp  DrawingTest.cpp  GammaProcessorTest.cpp  GrayPixelTest.cpp  PGMImageTest.cpp  PPMImageTest.cpp  PointTest.cpp  RGBPixelTest.cpp  RectangleTest.cpp
tests/resources/convolutions/input/: input.pgm  input.ppm
tests/resources/convolutions/output/: blurred.pgm  blurred.ppm  blurred_gauss.pgm  blurred_gauss.ppm  sobel_horizontal.pgm  sobel_vertical.pgm
tests/resources/pgm/: invalid_header_height.txt  invalid_header_maxVal.txt  invalid_header_type.txt  invalid_header_width.txt  invalid_no_pixels.txt  invalid_pixel_negative.txt  invalid_pixel_over_maxVal.txt  load.pgm  update_maxVal.pgm
tests/resources/ppm/: invalid_header_height.txt  invalid_header_maxVal.txt  invalid_header_type.txt  invalid_header_width.txt  invalid_no_pixels.txt  invalid_pixel_negative.txt  invalid_pixel_over_maxVal.txt
